--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Arcade Games Portfolio</title>
+<title>Makecode Arcade Games Portfolio</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,7 +39,53 @@
         <iframe src="https://arcade.makecode.com/---embed#pub:YOUR_EMBED_CODE_3"></iframe>
         <button class="like-btn" onclick="event.stopPropagation(); likeGame(3)">👍 Like</button>
         <span class="like-count" id="like-count-3">0 Likes</span>
+        
+     <!-- Game 4 -->
+    <div class="game-card" data-title="Space Adventure" onclick="openModal('Space Adventure','https://arcade.makecode.com/S32756-40562-56497-07539')">
+        <div class="game-title">Space Adventure</div>
+        <iframe src="https://arcade.makecode.com/S32756-40562-56497-07539"></iframe>
+        <button class="like-btn" onclick="event.stopPropagation(); likeGame(4)">👍 Like</button>
+        <span class="like-count" id="like-count-4">0 Likes</span>
     </div>
+
+    <!-- Game 5 -->
+    <div class="game-card" data-title="Jump Quest" onclick="openModal('Jump Quest','https://arcade.makecode.com/---embed#pub:YOUR_EMBED_CODE_2')">
+        <div class="game-title">Jump Quest</div>
+        <iframe src="https://arcade.makecode.com/---embed#pub:YOUR_EMBED_CODE_2"></iframe>
+        <button class="like-btn" onclick="event.stopPropagation(); likeGame(5)">👍 Like</button>
+        <span class="like-count" id="like-count-5">0 Likes</span>
+    </div>
+
+    <!-- Game 6 -->
+    <div class="game-card" data-title="Maze Runner" onclick="openModal('Maze Runner','https://arcade.makecode.com/---embed#pub:YOUR_EMBED_CODE_3')">
+        <div class="game-title">Maze Runner</div>
+        <iframe src="https://arcade.makecode.com/---embed#pub:YOUR_EMBED_CODE_3"></iframe>
+        <button class="like-btn" onclick="event.stopPropagation(); likeGame(6)">👍 Like</button>
+        <span class="like-count" id="like-count-6">0 Likes</span>
+    </div>
+
+     <!-- Game 7 -->
+    <div class="game-card" data-title="Space Adventure" onclick="openModal('Space Adventure','https://arcade.makecode.com/S32756-40562-56497-07539')">
+        <div class="game-title">Space Adventure</div>
+        <iframe src="https://arcade.makecode.com/S32756-40562-56497-07539"></iframe>
+        <button class="like-btn" onclick="event.stopPropagation(); likeGame(7)">👍 Like</button>
+        <span class="like-count" id="like-count-7">0 Likes</span>
+    </div>
+
+    <!-- Game 8 -->
+    <div class="game-card" data-title="Jump Quest" onclick="openModal('Jump Quest','https://arcade.makecode.com/---embed#pub:YOUR_EMBED_CODE_2')">
+        <div class="game-title">Jump Quest</div>
+        <iframe src="https://arcade.makecode.com/---embed#pub:YOUR_EMBED_CODE_2"></iframe>
+        <button class="like-btn" onclick="event.stopPropagation(); likeGame(8)">👍 Like</button>
+        <span class="like-count" id="like-count-8">0 Likes</span>
+    </div>
+
+    <!-- Game 9 -->
+    <div class="game-card" data-title="Maze Runner" onclick="openModal('Maze Runner','https://arcade.makecode.com/---embed#pub:YOUR_EMBED_CODE_3')">
+        <div class="game-title">Maze Runner</div>
+        <iframe src="https://arcade.makecode.com/---embed#pub:YOUR_EMBED_CODE_3"></iframe>
+        <button class="like-btn" onclick="event.stopPropagation(); likeGame(9)">👍 Like</button>
+        <span class="like-count" id="like-count-9">0 Likes</span>
 </div>
 
 <!-- Modal -->
@@ -61,3 +107,4 @@
 <script src="script.js"></script> 
 </body>
 </html>
+
